# ChangeLog for dev-php/php-cgi
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/php-cgi/Attic/ChangeLog,v 1.81 2005/07/11 14:49:06 sebastian Exp $

*php-cgi-4.4.0 (11 Jul 2005)

  11 Jul 2005; Sebastian Bergmann <sebastian@gentoo.org>
  -php-cgi-4.4.0_rc2.ebuild, +php-cgi-4.4.0.ebuild:
  Version bump.

  10 Jul 2005; Sebastian Bergmann <sebastian@gentoo.org>
  files/digest-php-cgi-4.3.11, files/digest-php-cgi-4.3.11-r1,
  files/digest-php-cgi-5.0.4, Manifest:
  Update Hardened-PHP digests.

  08 Jul 2005; Hardave Riar <hardave@gentoo.org> php-cgi-4.3.11-r1.ebuild:
  Stable on mips.

  05 Jul 2005; Sebastian Bergmann <sebastian@gentoo.org>
  -php-cgi-4.3.9_rc1.ebuild, -php-cgi-4.3.9_rc1-r1.ebuild:
  Pull old RC.

*php-cgi-4.4.0_rc2 (01 Jul 2005)

  01 Jul 2005; Sebastian Bergmann <sebastian@gentoo.org>
  -php-cgi-4.4.0_rc1.ebuild, +php-cgi-4.4.0_rc2.ebuild:
  Version bump.

  15 Jun 2005; Sebastian Bergmann <sebastian@gentoo.org>
  php-cgi-4.4.0_rc1.ebuild:
  Patch no longer needed, fixed UPSTREAM.

  15 Jun 2005; Sebastian Bergmann <sebastian@gentoo.org>
  php-cgi-4.4.0_rc1.ebuild:
  Patch no longer needed, fixed UPSTREAM.

*php-cgi-4.4.0_rc1 (13 Jun 2005)

  13 Jun 2005; Sebastian Bergmann <sebastian@gentoo.org>
  +php-cgi-4.4.0_rc1.ebuild:
  Version bump.

  11 Jun 2005; Bryan Østergaard <kloeri@gentoo.org> php-cgi-5.0.4.ebuild:
  Add ~ia64 and ~alpha keywords.

  11 Jun 2005; Stuart Herbert <stuart@gentoo.org> -php-cgi-5.0.0-r1.ebuild,
  -php-cgi-5.0.0.ebuild, -php-cgi-5.0.1.ebuild, -php-cgi-5.0.2.ebuild,
  -php-cgi-5.0.3-r1.ebuild, -php-cgi-5.0.3.ebuild:
  Removed obsolete version

*php-cgi-5.0.4 (11 Jun 2005)

  11 Jun 2005; Stuart Herbert <stuart@gentoo.org> +php-cgi-5.0.4.ebuild:
  Version bump; uses new -r2 eclass

  19 May 2005; Robin H. Johnson <robbat2@gentoo.org>
  php-cgi-4.3.9_rc1.ebuild, php-cgi-4.3.9_rc1-r1.ebuild,
  php-cgi-4.3.9.ebuild, php-cgi-4.3.9-r1.ebuild, php-cgi-4.3.10.ebuild,