@@ -1,4 +1,0 @@
-MD5 7e56824dae9679c59a8234eb848aa542 php-4.3.10.tar.bz2 4026148
-MD5 912ff94309b762563d0542db5187315f php-4.3.2-fopen-url-secure.patch 416
-MD5 fbb6b365f4c0263b1dfd498aef092a77 php-4.3.6-includepath.diff 285
-MD5 1735561010834da1a5f7889d21b8fb4f hardened-php-4.3.10-0.2.7.patch.gz 35745
