@@ -1,4 +1,0 @@
-MD5 fbc67d240812136a9842bc1f2a217b7a php-4.3.11.tar.bz2 4012575
-MD5 912ff94309b762563d0542db5187315f php-4.3.2-fopen-url-secure.patch 416
-MD5 fbb6b365f4c0263b1dfd498aef092a77 php-4.3.6-includepath.diff 285
-MD5 611cdddabfd71ffb724c428be33c14cb hardening-patch-4.3.11-0.3.2.patch.gz 80613
