@@ -1,4 +1,0 @@
-MD5 e8ab484fcb94cd2e0d7ecfd0762cfd33 php-4.3.8.tar.bz2 3963437
-MD5 912ff94309b762563d0542db5187315f php-4.3.2-fopen-url-secure.patch 416
-MD5 fbb6b365f4c0263b1dfd498aef092a77 php-4.3.6-includepath.diff 285
-MD5 394389c893680d8a0cea7e6c974e8619 hardened-php-4.3.8-0.2.2.patch.gz 17178
