@@ -1,4 +1,0 @@
-MD5 b799bbb330da60324d972641baab693c php-4.3.9.tar.bz2 4001681
-MD5 912ff94309b762563d0542db5187315f php-4.3.2-fopen-url-secure.patch 416
-MD5 fbb6b365f4c0263b1dfd498aef092a77 php-4.3.6-includepath.diff 285
-MD5 bba759ec8e12ccaee852d628e6107c04 hardened-php-4.3.9-0.2.6.patch.gz 28586
