@@ -1,6 +1,11 @@
 # ChangeLog for dev-php/php-cgi
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/php-cgi/Attic/ChangeLog,v 1.81 2005/07/11 14:49:06 sebastian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/php-cgi/Attic/ChangeLog,v 1.82 2005/07/11 14:58:15 sebastian Exp $
+
+  11 Jul 2005; Sebastian Bergmann <sebastian@gentoo.org>
+  -php-cgi-4.3.8.ebuild, -php-cgi-4.3.8-r1.ebuild, -php-cgi-4.3.9.ebuild,
+  -php-cgi-4.3.9-r1.ebuild, -php-cgi-4.3.10.ebuild, -php-cgi-4.3.11.ebuild:
+  Remove old versions.
 
 *php-cgi-4.4.0 (11 Jul 2005)
 
